Small styling issues fixed, fixed modal not closing on click bug, fixed regex tester logic and added test requirements visible for user when failure

--- a/style/components.css
+++ b/style/components.css
@@ -1170,6 +1170,14 @@ h4 {
     z-index: 5;
   }
 }
+@media only screen and (max-width: 700px) {
+  .modal-img {
+    align-self: center;
+    justify-self: center;
+    width: 90%;
+    height: auto;
+  }
+}
 /* Contact */
 .contact-main {
   height: 100%;
